corrección bugs password y avatar de usuarios

--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -83,7 +83,7 @@
                   
 
                   <label>Contraseña</label>
-                  <input type="password" name="contrasena" value="<%= masterusers.password %>">
+                  <input type="password" name="password" value="<%= masterusers.password %>">
                 </div>
 
 
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="form-group col"> <label for="avatarName" class="btn btn-outline-primary">Cargá tu nueva imagen</label>
-                 <input type="file" id="avatarName" name="avatarName" accept="images/*" style="display: none">
+                 <input type="file" id="avatarName" name="avatarName" accept="images/*" style="display: none" value="<%= masterusers.avatarName %>">
 
   
                 </div>
