--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -26,7 +26,7 @@
           </ul>
 
         <div class="tab">Sobre vos:
-          <p><input placeholder="Nombre..." name="name oninput="this.className = ''"></p>
+          <p><input placeholder="Nombre..." name="name" oninput="this.className = ''"></p>
           <p><input placeholder="Apellido..." name="surname" oninput="this.className = ''"></p>
           <p><select id="inputState" name="gender" class="form-control">
             <option selected>Genero</option>
@@ -58,7 +58,7 @@
         
         <div class="tab">Datos de Contacto:
           
-          <p> <input type="tel" name="telefono" name="telephone" placeholder="Telefono..."></p>
+          <p> <input type="tel" name="telephone" placeholder="Telefono..."></p>
           <p><input type="text" name="street" placeholder="Calle y número..."></p>
           <p> <input type="text" name="city" placeholder="Ciudad..."></p>
           <p><input type="text" name="CP" placeholder="Código Postal"></p>
