validaciones front consumo api usuarios + crear usuario de prueba + retro sprint 5

--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -28,11 +28,11 @@
         <div> <p>Sobre vos:</p>
           <br>
           <!-- Nombre -->
-          <input placeholder="Nombre..." name="name"  data-name="Nombre" class="form-control" oninput="this.className = ''">
+          <input placeholder="Nombre..." name="name"  data-name="Nombre" class="form-control">
           <p class="invalid-feedback"></p>
           <br>
           <!-- Apellido -->
-          <input placeholder="Apellido..." name="surname" data-name="Apellido" class="form-control" oninput="this.className = ''">
+          <input placeholder="Apellido..." name="surname" data-name="Apellido" class="form-control">
           <p class="invalid-feedback"></p>
           <br>
           <!-- Género -->
@@ -74,11 +74,11 @@
           <p> Datos de Usuario:</p>
           <br>
            <!-- Email -->
-          <input placeholder="E-mail..." name="email" data-name="Correo Electrónico" class="form-control" oninput="this.className = ''">
+          <input placeholder="E-mail..." name="email" data-name="Correo Electrónico" class="form-control">
           <p class="invalid-feedback"></p>
           <br>
            <!-- Password -->
-          <input type="password" placeholder="Contraseña..." name="password" data-name="Contraseña" class="form-control" oninput="this.className = ''">
+          <input type="password" placeholder="Ingresá una contraseña de al menos 8 caracteres..." name="password" data-name="Contraseña" class="form-control">
           <p class="invalid-feedback"></p>
         </div>
         <br>
