--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -10,18 +10,17 @@
     <%- include('../partials/nav'); %> 
     <%- include('../partials/searchBar'); %>
 <!-- main-content -->
-<section class="container">
 
-<div class="row">
 
-  <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 col-12">
+  <div class="row d-flex justify-content-center">
+  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-flex justify-content-end">
     <div class="cont">
     <h6>ARDUINO</h6>
     <a href="/products/category/1" class="call-to-action"><img src="/images/Arduino.JPG"> </a>
   </div>
  
     </div>
-<div class="col-xl-4  col-lg-6 col-md-6 col-sm-6 col-12"> 
+<div class="col-xl-3  col-lg-3 col-md-6 col-sm-12 col-12 d-flex justify-content-center"> 
   <div class="cont">
     <h6>RASPBERRRY</h6>    
         <a href="/products/category/2" class="call-to-action"><img src="/images/raspberrycat.jpg"></a>
@@ -29,21 +28,22 @@
 
      </div>
 
-     <div class="col-xl-4  col-lg-12 col-md-5 col-sm-6 col-12">
+     <div class="col-xl-3  col-lg-3 col-md-6 col-sm-12 col-12 d-flex justify-content-start">
       <div class="cont">
   <h6>PLCs</h6>
   <a href="/products/category/3" class="call-to-action"><img src="/images/PLC_home.jpg"></a>
       </div>
      </div>
-     <div class="col-xl-12  col-lg-12 col-md-12 col-sm-6 col-12">
+  </div>
+  <div class="row">  
+     <div class="col-xl-12  col-lg-12 col-md-12 col-sm-12 col-12 d-flex justify-content-center">
       <div class="cont">
   <h6>COMBOS Y OFERTAS </h6>
   <a href="/products/category/4" class="call-to-action"><img class="combos"src="/images/Combos.jpg" alt="Combos y Ofertas"> </a>
       </div>
-
+      </div>
      </div>
-  </div>
-</section>
+
 
 <!-- pie -->
 <%- include('../partials/footer'); %>
