--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -13,14 +13,14 @@
 
 
   <div class="row d-flex justify-content-center">
-  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 d-flex justify-content-end">
+  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 " id="primeraCol">
     <div class="cont">
     <h6>ARDUINO</h6>
     <a href="/products/category/1" class="call-to-action"><img src="/images/Arduino.JPG"> </a>
   </div>
  
     </div>
-<div class="col-xl-3  col-lg-3 col-md-6 col-sm-12 col-12 d-flex justify-content-center"> 
+<div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12 " id="segundaCol"> 
   <div class="cont">
     <h6>RASPBERRRY</h6>    
         <a href="/products/category/2" class="call-to-action"><img src="/images/raspberrycat.jpg"></a>
@@ -28,15 +28,15 @@
 
      </div>
 
-     <div class="col-xl-3  col-lg-3 col-md-6 col-sm-12 col-12 d-flex justify-content-start">
+     <div class="col-xl-3  col-lg-3 col-md-6 col-sm-12 col-12 " id="terceraCol">
       <div class="cont">
   <h6>PLCs</h6>
   <a href="/products/category/3" class="call-to-action"><img src="/images/PLC_home.jpg"></a>
       </div>
      </div>
   </div>
-  <div class="row">  
-     <div class="col-xl-12  col-lg-12 col-md-12 col-sm-12 col-12 d-flex justify-content-center">
+  <div class="row d-flex justify-content-center">  
+     <div class="col-xl-12  col-lg-12 col-md-12 col-sm-12 col-12" id="cuartaCol">
       <div class="cont">
   <h6>COMBOS Y OFERTAS </h6>
   <a href="/products/category/4" class="call-to-action"><img class="combos"src="/images/Combos.jpg" alt="Combos y Ofertas"> </a>
