--- a/app/partials/searchBar.ejs
+++ b/app/partials/searchBar.ejs
@@ -1,9 +1,8 @@
 <!-- buscador -->
-<div class="wrap">
-    <div class="search">
-     <input type="text" class="searchTerm" placeholder="Buscá por producto, por categoría o por marca">
-     <button type="submit" class="searchButton"> &#128270;
-      </button>
-    
-    </div>
-    </div>
+    <form action="/products/search" method="GET">
+      <div class="search">
+        <input type="text" class="searchTerm" name="search" placeholder="Buscá por nombre de producto o por categoría">
+        <button type="submit" class="searchButton"> &#128270;</button>
+      </div>
+   
+    </form>
