--- a/app/views/productsSearch.ejs
+++ b/app/views/productsSearch.ejs
@@ -13,15 +13,15 @@
     <%- include('../partials/searchBar'); %>
     <link rel='stylesheet' href='/stylesheets/styleProductDetail.css' />
 <!-- main-content -->
-
 <div class="container products-wrapper">
     <div class="row">
         <div class="col-12">
             <br>
-                <h4 class="products-title"><%= title2 %></h4>
+                <h4 class="products-title"><%= title2 %> </h4>
             <br>
         </div>
-         
+        
+        <% if (products.length > 0) { %>
             <% products.forEach     ( prd => { %>
             <div class="col-xl-4 col-lg-4 col-12 col-sm-6 col-lg-3">
             
@@ -33,21 +33,27 @@
                         <article class="product-box_data">
                             <h6><%= prd.prodName %> </h6>
                             <h5>$ <%= prd.price %> </h5>
-                            <!-- <span><%= prd.discount %>% OFF</span> -->
+                    
                         </article>
                     </a>
                 </section>
         
             </div>
             <% }); %>
-    
+            <% } else { %>
+                <div>
+                <img src="/images/empty.png" alt="Logo SLC">
+                <br>
+                <p>No hay resultados para mostrar, podés ver todos los productos <a href="/products" target="blank">acá</a></p>
+                </div>
+
+            <% } %>
     </div>
 </div>
 
 </div>
 
 </section>
-
 
     <!-- pie -->
 <%- include('../partials/footer'); %>
