--- a/app/views/productDetailOk.ejs
+++ b/app/views/productDetailOk.ejs
@@ -22,7 +22,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-sm-6 col-lg-8"> 
-      <p class="tituloProducto"> <%= product.prodName%></p>
+      <p class="tituloProducto"> <%= product.prodName %></p>
     </div>
     <div class="col-6 col-lg-4"> 
       <span class="fa fa-star checked"></span>
@@ -49,13 +49,14 @@
 
   <div class="row">
     <div class="col-12">
+      <div class="text"><%= msg %></div>
       <div class="pieDetalle">
         <div class="row align-items-center">
           <div class="col-12 col-lg-3">
             <h2 class="precio"> $ <%= product.price %> </h2> 
           </div>
 
-          <div class="col-12 col-md-4 col-lg-3">
+         <!--  <div class="col-12 col-md-4 col-lg-3">
             <div class="dropdown drop-own">
               <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">
                 Elegir Cantidad <span class="caret"></span>
@@ -66,14 +67,20 @@
                 <li>3</li>
               </ul>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-12 col-md-4 col-lg-3">
             <a href="/" class="buttonComprar">  Comprar  </a>
           </div>
 
           <div class="col-12 col-md-4 col-lg-3">
-            <a href="/" class="buttonCarrito"> Agregar al Carrito </a> 
+             <form action="/products/addToCart"  method="POST" class="cabezalPagina">
+              <input type="hidden" class="form-control" name="prodName" value="<%= product.prodName %>"> 
+              <input type="hidden" class="form-control" name="id" value="<%= product.id %>">
+              <input type="hidden" class="form-control" name="price" value="<%= product.price %>">
+              <input type="hidden" class="form-control" name="imageName" value="<%= product.imageName %>">
+              <button type="submit" class="buttonCarrito"  >Agregar al Carrito</button>
+             </form> 
           </div>
         </div>
       </div>
@@ -88,9 +95,13 @@
 <%- include('../partials/footer'); %>
     
 
+<script src="/js/localStorage.js">
+
+</script>
 <!---bootstrap-->
- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  
+</body>
 </html>
