--- a/app/views/productCart.ejs
+++ b/app/views/productCart.ejs
@@ -33,9 +33,8 @@
             </div>
             </div>
             <% })}else{ %>
-              <% console.log('pasé por acá'); %>
              <%  var sinCarrito = "Usted no tiene productos en su carro de compras"; %>
-             <div><%= sinCarrito %> 
+             <div class="text"><%= sinCarrito %> 
             </div>
             <% } %>
       </div>
@@ -60,10 +59,21 @@
                 <div class="col-12 col-md-4 col-lg-4">
                   <a href="/" class="buttonCarrito"> Seguir Comprando </a> 
                 </div>
-
-                
+                <%  var caso = 'initial' %>
+                <% if(!cart){ %>
+                  <%   caso = 'noCart' %>
+                  <%   }else{ %>
+                    <%   if(logged){ %>
+                      <%     caso = 'noLogged' %>
+                      <%    }else{ %>
+                        <%      caso = 'comprar' %>
+                        <%     } %>
+                        <%    } %>
                 <div class="col-12 col-md-4 col-lg-4">
-                <a href="/" class="buttonComprar">  Comprar  </a>
+                  <form name="compras" action="/transactions/buy"  method="POST"  class="cabezalPagina">
+                    <input type="hidden" class="form-control" name="caso" value="<%= caso %>"> 
+                    <button type="submit" class="buttonComprar"  >Comprar</button>
+                   </form> 
                 </div>
 
                 <div class="col-12 col-md-1 col-lg-1">
@@ -85,6 +95,7 @@
   </body>
   <script src="/js/jquery-3.4.1.min.js"></script>
   <script src="/js/bootstrap-input-spinner.js"></script>
+  <script scr="/js/validateBuy.js"></script>
 <script>
     $("input[type='number']").inputSpinner();
 </script> 
