ajustes validación registro post cambio en api users + limpio archivo userControllers de comentarios viejos + ajustes html form registro y login

--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -14,6 +14,7 @@
       <div class="col-12">
       <div class="tituloSaludo">
       <h2> <%= msg %></h2>
+      <br>
     </div>
     </div>
     <div class="col-12">
@@ -22,9 +23,10 @@
       <input class="unInput" type="password" name="contrasena" size="40" placeholder="Contraseña" required>
       
     </div>
-   
-      <input class="unInput" type="checkbox" name="recordar" size="40" >
-         <label>Mantener sesión abierta</label>
+      <label>
+        <input class="unInput" type="checkbox" name="recordar" size="40" >
+        Mantener sesión iniciada
+      </label>
     
     </div>
     <div class="col-12">
