--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -110,8 +110,14 @@
           <hr>
           <br>
           <!-- Términos y condiciones -->
-          <input type="checkbox" id="aceptaTerminos" value="first_checkbox">
-          <p>Al registrarme acepto los terminos y condiciones y la Politica de Privacidad de SLC Componentes Electronicos SA </p>
+          <div class="row"> 
+            <div class="col-1"> 
+              <input type="checkbox" id="aceptaTerminos" value="first_checkbox">
+            </div>
+            <div class="col-11">
+              <p>Al registrarme acepto los terminos y condiciones y la Politica de Privacidad de SLC Componentes Electronicos SA</p>
+            </div>
+          </div>
         </div>
      
 <!-- Botón de envío -->
