--- a/app/views/productCart.ejs
+++ b/app/views/productCart.ejs
@@ -26,7 +26,7 @@
               <div class="tituloProducto"> <%= prod.prodName %>
               </div>
               <div class="precioCant">
-              <input class="form-control col-xl-2  col-12"  type="number" value="2" min="1" max="999">
+              <input class="form-control col-xl-2  col-12"  type="number" value="<%= prod.cant %>" min="1" max="999" disabled="true">
                 <div class="col-xl-2  col-12">$ <%= prod.price %>
                 </div> 
               </div>
