acceso para cargar producto desde perfil de usuario

--- a/app/views/userProfile.ejs
+++ b/app/views/userProfile.ejs
@@ -17,7 +17,8 @@
     <div class="col-6 col-lg-4"> 
  
         <a href="/users/<%= masterusers.id %>/edit" target="blank">Editar mi perfil</a>
-
+        <br>
+        <a href="/products/create" target="blank">Vender un producto</a>
     </div>
   </div>
 </div>
