cookie de carrito

--- a/app/partials/nav.ejs
+++ b/app/partials/nav.ejs
@@ -27,7 +27,12 @@
             <% } %>
 
             <% if(logged){ %>
-            <li><a href="/productCart" > <img src="/images/carrito16px.png"> (  <%= cart.length %>    ) </a></li>
+            <li><a href="/productCart" > <img src="/images/carrito16px.png"> 
+              <%  if(cart =! 'undefined'){  %>
+                ( <%=   cart.length  %> )   
+                <% } %>
+            
+            </a></li>
             <% }else{ %>
               <li><a href="/productCart" > <img src="/images/carrito16px.png"></a></li>
               <% } %>
