--- a/app/views/productDetailOk.ejs
+++ b/app/views/productDetailOk.ejs
@@ -58,24 +58,30 @@
           </div>
 
           <div class="col-12 col-md-4 col-lg-3">
-            <input class="form-control" name="cant" type="number" value="2" min="1" max="999">
+            <input class="form-control" name="cant" id="cantCarrito" type="number" value="2" min="1" max="999">
           </div> 
 
           
-
-          <div class="col-12 col-md-4 col-lg-3">
-            <a href="/" class="buttonComprar">  Comprar  </a>
-          </div>
-
           <div class="col-12 col-md-4 col-lg-3">
              
-              <input type="hidden" class="form-control" name="prodName" value="<%= product.prodName %>"> 
-              <input type="hidden" class="form-control" name="id" value="<%= product.id %>">
-              <input type="hidden" class="form-control" name="price" value="<%= product.price %>">
-              <input type="hidden" class="form-control" name="imageName" value="<%= product.imageName %>">
-              <button type="submit" class="buttonCarrito"  >Agregar al Carrito</button>
-             </form> 
-          </div>
+            <input type="hidden" class="form-control" name="prodName" value="<%= product.prodName %>"> 
+            <input type="hidden" class="form-control" name="id" value="<%= product.id %>">
+            <input type="hidden" class="form-control" name="price" value="<%= product.price %>">
+            <input type="hidden" class="form-control" name="imageName" value="<%= product.imageName %>">
+            <button type="submit" class="buttonCarrito"  >Agregar al Carrito</button>
+           </form> 
+        </div>
+
+          <div class="col-12 col-md-4 col-lg-3">
+            <form action="/products/buy1Prod"  method="POST" class="cabezalPagina">
+            <input type="hidden" class="form-control" name="prodName" value="<%= product.prodName %>"> 
+            <input type="hidden" class="form-control" name="id" value="<%= product.id %>">
+            <input type="hidden" class="form-control" name="price" value="<%= product.price %>">
+            <input type="hidden" class="form-control" name="imageName" value="<%= product.imageName %>">
+            <input class="form-control" name="cant" id="cantCompra" type="hidden" value="2" min="1" max="999">
+            <button type="submit" class="buttonComprar"  >  Comprar  </a>
+          </form>
+          </div>          
         </div>
       </div>
     </div>
