--- a/app/views/products.ejs
+++ b/app/views/products.ejs
@@ -28,7 +28,7 @@
                 <section class="product-box">
                     <a href="/products/<%= prd.id %>">
                         <figure class="product-box_image">
-                            <img src="/images/products/<%= prd.imageName%>" alt="imagen de producto">
+                            <img src="/images/products/<%= prd.imageName%>" alt="imagen de producto" width="150" height="150">
                         </figure>
                         <article class="product-box_data">
                             <h6><%= prd.prodName %> </h6>
