--- a/app/views/editProduct.ejs
+++ b/app/views/editProduct.ejs
@@ -69,7 +69,7 @@
             <br>
             <div>
                 <label>Imagen Actual:</label>
-                <img src="/images/products/<%= product.imageName %>">
+                <img src="/images/products/<%= product.imageName %>" width="150" height="150">
             </div>
             <br>
             <div>
